--- a/vue-ts-demo/package.json
+++ b/vue-ts-demo/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "register-service-worker": "^1.6.2",
+    "vant": "^2.5.5",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.2",
     "vue-property-decorator": "^8.3.0",
@@ -33,6 +34,7 @@
     "less-loader": "^5.0.0",
     "lint-staged": "^9.5.0",
     "prettier": "^1.19.1",
+    "ts-import-plugin": "^1.6.5",
     "typescript": "~3.7.5",
     "vue-template-compiler": "^2.6.11"
   },
