--- a/vue-ts-demo/package.json
+++ b/vue-ts-demo/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "nanoid": "^2.1.11",
     "register-service-worker": "^1.6.2",
     "vant": "^2.5.5",
     "vue": "^2.6.11",
@@ -15,7 +16,8 @@
     "vue-icon-font-pro": "^1.0.1",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.5",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "vuex-class": "^0.3.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.18.0",
